# Uber-HyperDispatch

./: .gitignore  Makefile  README.md
.github/workflows/: ci.yml
apps/api/: pyproject.toml
apps/api/src/hyperdispatch_api/: __init__.py  db.py  engine.py  main.py  repository.py  server.py
apps/api/tests/: test_api.py  test_server_http.py
apps/simulator/: pyproject.toml
apps/simulator/src/hyperdispatch_sim/: runner.py  sim.py
apps/simulator/src/hyperdispatch_sim/scenarios/: __init__.py  catalog.py
apps/simulator/tests/: test_runner_cli.py  test_sim.py
apps/web/: .eslintrc.cjs  eslint.config.js  package.json  tsconfig.json  vitest.config.ts
apps/web/src/: App.test.tsx  App.tsx  main.tsx  types.ts
apps/web/src/api/: client.ts  types.ts
apps/web/src/components/: Layout.tsx
apps/web/src/components/map/: LiveFleetMap.tsx
apps/web/src/components/ui/: Badge.tsx  Card.tsx  DataTable.tsx  MetricTile.tsx
apps/web/src/hooks/: useEventStream.ts  useTraceStream.ts  useWorldStream.ts  useWorldWS.ts
apps/web/src/pages/: AnalyticsPage.tsx  DispatchQueuePage.tsx  DriversPage.tsx  GeoDebuggerPage.tsx  IncidentsPage.tsx  LiveMapPage.tsx  ReplayStudioPage.tsx  RidersPage.tsx  SettingsPage.tsx  SimulatorControlPage.tsx  SupplyDemandPage.tsx  TraceExplorerPage.tsx  index.ts  pages.tsx
apps/web/src/store/: world-store.tsx
apps/web/src/styles/: theme.css
docs/: architecture.md  demo.md  matching.md  performance.md  replay.md  testing.md
scripts/: demo.sh  dev.sh  loc.py  verify.sh
