[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hyperdispatch-api"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111,<1",
  "uvicorn>=0.30,<1",
  "hyperdispatch-protocol",
  "hyperdispatch-geo",
  "httpx>=0.27,<1",
]

[tool.setuptools.packages.find]
where = ["src"]
